k3s/apps/aria2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aria2
  namespace: downloads
spec:
  selector:
    app: aria2
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  type: ClusterIP
